--- a/Fundamentals/Views/Shared/_Layout.cshtml
+++ b/Fundamentals/Views/Shared/_Layout.cshtml
@@ -25,6 +25,8 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Controller", "", "Parameter")</li>
                     <li>@Html.ActionLink("Action", "Details", "Home")</li>
+                    <li>@Html.ActionLink("Filters", "Filters", "Home")</li>
+                    <li>@Html.ActionLink("ActionResult", "Person", "Home")</li>
                 </ul>
             </div>
         </div>
