added custom module

--- a/Fundamentals/Views/Shared/_Layout.cshtml
+++ b/Fundamentals/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <li>@Html.RouteLink("Filters", "Default", new { controller = "Home", action = "Filters" })</li>
                     <li>@Html.RouteLink("ActionResult", "Default", new { controller = "Home", action = "Person" })</li>
                     <li>@Html.RouteLink("Handler", "Book", new { title = "" })</li>
+                    <li>@Html.RouteLink("Module", "Default", new { controller = "Home", action = "About" })</li>
                 </ul>
             </div>
         </div>
